--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -12,7 +12,7 @@
     <a href="{% url 'logoutuser' %}"><button class="logout-btn">Logout</button></a>
 </header> {% endcomment %}
 
-<div class="header-main ">
+<div class="header-main " style="z-index: 2;">
     <nav class="navbar navbar-dark navbar-expand-md ">
         <div class="container-fluid">
          
