--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -46,7 +46,7 @@
             <h4 style="color:#2ea86d">Consultations</h4>
             <hr><br>
 
-            <table id="consultation-table" class="patient-table table-striped ">
+            <table id="consultation-table" class="patient-table table-striped content-table">
                 <thead class="table-success">
                     <th>Patient Number</th>
                     <th>Common Concern</th>
