--- a/website/templates/medications.html
+++ b/website/templates/medications.html
@@ -45,7 +45,7 @@
     
     
       <!--MEDICINES TABLE-->
-      <table id="medicine-table" class="medicine-tables">
+      <table id="medicine-table" class="medicine-tables content-table">
         <thead >
           
           <th>Medicine Name</th>
