--- a/website/templates/patientstable.html
+++ b/website/templates/patientstable.html
@@ -1,6 +1,6 @@
 
 <!--PATIENTS TABLE-->
-    <table id="patienttable" class="patient-tables">
+    <table id="patienttable" class="patient-tables content-table">
       <thead >
         <th>Patient Code</th>
         <th>Patient Name</th>
