input prescription revision

--- a/website/templates/patientinfo.html
+++ b/website/templates/patientinfo.html
@@ -125,7 +125,7 @@
       </table>
     </div>
     <!--end of MEDICAL RECORD TABLE-->
-
+{% comment %} 
     <div class="phistory-head">
       <div class="lbl-details">
         <h3>Medications</h3>
@@ -350,7 +350,7 @@
     </div>
 
   </div>
-</div>
+</div> {% endcomment %}
 {% endblock content1 %}
 
 </div>
