--- a/website/templates/patientmedinfo-medications.html
+++ b/website/templates/patientmedinfo-medications.html
@@ -30,7 +30,7 @@
             {% comment %} <div class="title-form"></div> {% endcomment %}
           
 
-            <form method="POST" id="additsem-form">
+            {% comment %} <form method="POST" id="additsem-form">
               {% csrf_token %}
               <a class="btn btn-outline-success" style="margin-left:20px;margin-top:10px;"   type="button" data-bs-toggle="modal" data-bs-target="#searchmedicine"><i class="bi bi-search"></i> Search medicine</a>
               <a class="btn btn-success"style="margin-left:5px;margin-top:10px;"   type="button" data-bs-toggle="modal" data-bs-target="#print_report">
@@ -112,9 +112,54 @@
 
               </div>
 
-            </form>
+            </form> {% endcomment %}
 
-            
+
+            <div class="m-3">
+                <label>Medicine/Preparation</label>
+                <div class="row g-3">
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="medicine name" >
+                  </div>
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="ex. mg/ml">
+                  </div>
+                </div>
+            </div>
+
+            <div class="m-3">
+              <label>Transcription</label>
+              <div class="row g-3">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="medicine name" >
+                </div>
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="ex. mg/ml">
+                </div>
+              </div>
+          </div>
+        
+          
+          <div class="row m-3">
+             <div class="col-md-6">
+              <label for="inputCity" class="form-label">City</label>
+              <input type="text" class="form-control" id="inputCity">
+            </div>
+            <div class="col-md-4">
+              <label for="inputState" class="form-label">State</label>
+              <select id="inputState" class="form-select">
+                <option selected>Choose...</option>
+                <option>...</option>
+              </select>
+            </div>
+            <div class="col-md-2">
+              <label for="inputZip" class="form-label">Zip</label>
+              <input type="text" class="form-control" id="inputZip">
+            </div>
+           
+          </div>
+      
+
                 <!--PATIENT PRESCRIPTION TABLE-->
                 <div class="medicalhistorytable">
                   <table id="table-medications" class="table table-sm table-bordered content-table">
