added dosage db

--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="{% url "medications" %}">Medicines</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url "registrationpage" %}">Settings</a>
+                <a class="nav-link" href="{% url "medicationsettings" %}">Settings</a>
               </li>
               
             </ul>
