--- a/website/templates/registrationpage.html
+++ b/website/templates/registrationpage.html
@@ -7,12 +7,7 @@
 
 <div class="container1">
   
-    <!--Left Menus-->
-    <div class="left-menu">
-        <div class="active-title">Menu</div>
-        <a href="#">Register New User</a><hr>
-     
-      </div>
+    {% include "settingsmenu.html " %}
 
   <!--Add new patient form-->
   <div class="reg-area">
